[tool.poetry]
name = "get-passphrase"
version = "0.1.0"
description = "Extensible passphrase resolver, supporting prompting as well as passphrases stored in environment variables, files or keychains"
authors = ["Sam McKelvie <dev@mckelvie.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
keyring = "^23.5.0"
sentinel = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
